Add DTOs and centralize error handling for IntegratedMovement
- Introduced IntegratedMovementDTO to standardize API responses.
- Updated IntegratedMovementController and service methods to use DTOs consistently.
- Centralized error handling for IntegratedMovement using ResourceNotFoundException and standardized error responses.
- Refactored controller methods to return proper HTTP status codes and structured error messages (404 for not found, 500 for internal errors).
- Updated unit tests to match the new DTO structure and verify correct status codes and response content.